test/fail_compilation/fail9479.d
auto bar(typeof(return) arg)  // disallowed
{
    return 0;
}
